Fixes footer to be truly sticky at the bottom of the page--no longer covers content

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,8 +1,10 @@
 /************BASE STRUCTURE: STYLING OF PARENT LEVEL ELEMENTS************/
-body {
+
+html, body {
   color: #222;
   font-family: 'Vollkorn', serif;
   font-size: 16px;
+  height: 100%;
 }
 
 ::selection {
@@ -94,7 +96,7 @@ label {
 
 /* Header */
 
-header, footer {
+header {
   background-color: #222;
   color: #fff;
   padding: 10px 0px;
@@ -128,24 +130,41 @@ header #nav, footer nav {
 }
 
 /* Footer */
+footer, #content:after {
+  height: 42px;
+}
+
 footer {
+  background-color: #222;
+  color: #fff;
   position: fixed;
   bottom: 0;
+  width: 100%;
 }
 
 footer p {
   display: inline;
-  margin-top: 0px;
-  margin-bottom: 0px;
+  float: left;
+  margin-top: 12px;
+}
+
+footer nav {
+  margin-top: 12px;
 }
 
 
 /************CONTENT************/
 
 #content {
-  margin: 40px 5% 0px 5%;
-  min-height: 800px;
+  margin: 40px 5% 40px 5%;
+  margin-bottom: -42px;
+  min-height: 100%;
   min-width: 600px;
+}
+
+#content:after {
+  content: "";
+  display: block;
 }
 
 .survey-category {
@@ -155,10 +174,12 @@ footer p {
 
 .submit-survey {
   margin-top: 20px;
+  margin-left: -20px;
+  position: relative;
 }
 
 .submit-survey input[type=text] {
-  width: 300px;
+  width: 500px;
 }
 
 
@@ -260,13 +281,13 @@ footer p {
   padding-left: 20px;
 }
 
-.survey_responses li {
+.survey_responses li, #questions li {
  color: #41a30d;
  font-size: 20px;
  margin: 75px 0px;
 }
 
-.survey_responses li:first-child {
+.survey_responses li:first-child, #questions li:first-child {
   margin-top: 20px;
 }
 
@@ -312,7 +333,7 @@ footer p {
 #questions {
   margin-top: 50px;
   padding: 0;
-  padding-left: 20px;
+  padding-left: 25px;
 }
 
 #questions input:not([type=submit]) {
@@ -330,6 +351,28 @@ footer p {
 #questions input[type=submit] {
   float: right;
 }
+
+/************TAKE A SURVEY, YO************/
+
+/* Survey Submit Page */
+
+#questions li span {
+  color: #222;
+}
+
+.submit-survey input {
+  display: inline-block;
+}
+
+.submit-survey input[type=submit]{
+  background-color: #41a30d;
+  color: #fff;
+  display: block;
+  font-size: 20px;
+  position: absolute;
+  top: 50px;
+}
+
 
 /************DBC SKELETON DEFAULTS************/
 .container {
